# mlops-zoomcamp

./: pyproject.toml
notebooks/: duration-prediction.ipynb
src/mlops_zoomcamp/: __init__.py
