[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "polars[pandas,plot]>=1.29.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
lint = [
    "ruff>=0.11.8",
]
