[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlflow>=3.1.0",
    "pendulum>=3.1.0",
    "polars[pandas,plot]>=1.30.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
    "xgboost>=3.0.0",
]
lint = [
    "pyright>=1.1.402",
    "ruff>=0.11.13",
]
